--- a/pod-security/restricted/restrict-volume-types/restrict-volume-types.yaml
+++ b/pod-security/restricted/restrict-volume-types/restrict-volume-types.yaml
@@ -18,28 +18,29 @@ spec:
   validationFailureAction: audit
   background: true
   rules:
-  - name: restricted-volumes
-    match:
-      resources:
-        kinds:
-        - Pod
-    validate:
-      message: >-
-        Only the following types of volumes may be used: configMap, csi, downwardAPI,
-        emptyDir, ephemeral, persistentVolumeClaim, projected, and secret.
-      deny:
-        conditions:
-          all:
-          - key: "{{ request.object.spec.volumes[].keys(@)[] || '' }}"
-            operator: AnyNotIn
-            value:
-            - name
-            - configMap
-            - csi
-            - downwardAPI
-            - emptyDir
-            - ephemeral
-            - persistentVolumeClaim
-            - projected
-            - secret
-            - ''
+    - name: restricted-volumes
+      match:
+        any:
+        - resources:
+            kinds:
+              - Pod
+      validate:
+        message: >-
+          Only the following types of volumes may be used: configMap, csi, downwardAPI,
+          emptyDir, ephemeral, persistentVolumeClaim, projected, and secret.
+        deny:
+          conditions:
+            all:
+            - key: "{{ request.object.spec.volumes[].keys(@)[] || '' }}"
+              operator: AnyNotIn
+              value:
+              - name
+              - configMap
+              - csi
+              - downwardAPI
+              - emptyDir
+              - ephemeral
+              - persistentVolumeClaim
+              - projected
+              - secret
+              - ''
