--- a/pod-security/baseline/disallow-host-process/disallow-host-process.yaml
+++ b/pod-security/baseline/disallow-host-process/disallow-host-process.yaml
@@ -18,28 +18,29 @@ spec:
   validationFailureAction: audit
   background: true
   rules:
-  - name: host-process-containers
-    match:
-      resources:
-        kinds:
-        - Pod
-    validate:
-      message: >-
-        HostProcess containers are disallowed. The fields spec.securityContext.windowsOptions.hostProcess,
-        spec.containers[*].securityContext.windowsOptions.hostProcess, spec.initContainers[*].securityContext.windowsOptions.hostProcess,
-        and spec.ephemeralContainers[*].securityContext.windowsOptions.hostProcess must either be undefined
-        or set to `false`.
-      pattern:
-        spec:
-          =(ephemeralContainers):
-            - =(securityContext):
-                =(windowsOptions):
-                  =(hostProcess): "false"
-          =(initContainers):
-            - =(securityContext):
-                =(windowsOptions):
-                  =(hostProcess): "false"
-          containers:
-            - =(securityContext):
-                =(windowsOptions):
-                  =(hostProcess): "false"
+    - name: host-process-containers
+      match:
+        any:
+        - resources:
+            kinds:
+              - Pod
+      validate:
+        message: >-
+          HostProcess containers are disallowed. The fields spec.securityContext.windowsOptions.hostProcess,
+          spec.containers[*].securityContext.windowsOptions.hostProcess, spec.initContainers[*].securityContext.windowsOptions.hostProcess,
+          and spec.ephemeralContainers[*].securityContext.windowsOptions.hostProcess must either be undefined
+          or set to `false`.
+        pattern:
+          spec:
+            =(ephemeralContainers):
+              - =(securityContext):
+                  =(windowsOptions):
+                    =(hostProcess): "false"
+            =(initContainers):
+              - =(securityContext):
+                  =(windowsOptions):
+                    =(hostProcess): "false"
+            containers:
+              - =(securityContext):
+                  =(windowsOptions):
+                    =(hostProcess): "false"
