--- a/pod-security/baseline/restrict-seccomp/restrict-seccomp.yaml
+++ b/pod-security/baseline/restrict-seccomp/restrict-seccomp.yaml
@@ -17,33 +17,34 @@ spec:
   background: true
   validationFailureAction: audit
   rules:
-  - name: check-seccomp
-    match:
-      resources:
-        kinds:
-        - Pod
-    validate:
-      message: >-
-        Use of custom Seccomp profiles is disallowed. The fields
-        spec.securityContext.seccompProfile.type,
-        spec.containers[*].securityContext.seccompProfile.type,
-        spec.initContainers[*].securityContext.seccompProfile.type, and
-        spec.ephemeralContainers[*].securityContext.seccompProfile.type
-        must be unset or set to `RuntimeDefault` or `Localhost`.
-      pattern:
-        spec:
-          =(securityContext):
-            =(seccompProfile):
-              =(type): "RuntimeDefault | Localhost"      
-          =(ephemeralContainers):
-          - =(securityContext):
+    - name: check-seccomp
+      match:
+        any:
+        - resources:
+            kinds:
+              - Pod
+      validate:
+        message: >-
+          Use of custom Seccomp profiles is disallowed. The fields
+          spec.securityContext.seccompProfile.type,
+          spec.containers[*].securityContext.seccompProfile.type,
+          spec.initContainers[*].securityContext.seccompProfile.type, and
+          spec.ephemeralContainers[*].securityContext.seccompProfile.type
+          must be unset or set to `RuntimeDefault` or `Localhost`.
+        pattern:
+          spec:
+            =(securityContext):
               =(seccompProfile):
-                =(type): "RuntimeDefault | Localhost"
-          =(initContainers):
-          - =(securityContext):
-              =(seccompProfile):
-                =(type): "RuntimeDefault | Localhost"
-          containers:
-          - =(securityContext):
-              =(seccompProfile):
-                =(type): "RuntimeDefault | Localhost"
+                =(type): "RuntimeDefault | Localhost"      
+            =(ephemeralContainers):
+            - =(securityContext):
+                =(seccompProfile):
+                  =(type): "RuntimeDefault | Localhost"
+            =(initContainers):
+            - =(securityContext):
+                =(seccompProfile):
+                  =(type): "RuntimeDefault | Localhost"
+            containers:
+            - =(securityContext):
+                =(seccompProfile):
+                  =(type): "RuntimeDefault | Localhost"
