--- a/pod-security/restricted/disallow-privilege-escalation/disallow-privilege-escalation.yaml
+++ b/pod-security/restricted/disallow-privilege-escalation/disallow-privilege-escalation.yaml
@@ -16,26 +16,27 @@ spec:
   validationFailureAction: audit
   background: true
   rules:
-  - name: privilege-escalation
-    match:
-      resources:
-        kinds:
-        - Pod
-    validate:
-      message: >-
-        Privilege escalation is disallowed. The fields
-        spec.containers[*].securityContext.allowPrivilegeEscalation,
-        spec.initContainers[*].securityContext.allowPrivilegeEscalation,
-        and spec.ephemeralContainers[*].securityContext.allowPrivilegeEscalation
-        must be set to `false`.
-      pattern:
-        spec:
-          =(ephemeralContainers):
-          - securityContext:
-              allowPrivilegeEscalation: "false"
-          =(initContainers):
-          - securityContext:
-              allowPrivilegeEscalation: "false"
-          containers:
-          - securityContext:
-              allowPrivilegeEscalation: "false"
+    - name: privilege-escalation
+      match:
+        any:
+        - resources:
+            kinds:
+              - Pod
+      validate:
+        message: >-
+          Privilege escalation is disallowed. The fields
+          spec.containers[*].securityContext.allowPrivilegeEscalation,
+          spec.initContainers[*].securityContext.allowPrivilegeEscalation,
+          and spec.ephemeralContainers[*].securityContext.allowPrivilegeEscalation
+          must be set to `false`.
+        pattern:
+          spec:
+            =(ephemeralContainers):
+            - securityContext:
+                allowPrivilegeEscalation: "false"
+            =(initContainers):
+            - securityContext:
+                allowPrivilegeEscalation: "false"
+            containers:
+            - securityContext:
+                allowPrivilegeEscalation: "false"
