--- a/pod-security/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
+++ b/pod-security/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
@@ -16,27 +16,28 @@ spec:
   validationFailureAction: audit
   background: true
   rules:
-  - name: run-as-non-root-user
-    match:
-      resources:
-        kinds:
-        - Pod
-    validate:
-      message: >-
-        Running as root is not allowed. The fields spec.securityContext.runAsUser,
-        spec.containers[*].securityContext.runAsUser, spec.initContainers[*].securityContext.runAsUser,
-        and spec.ephemeralContainers[*].securityContext.runAsUser must be unset or
-        set to a number greater than zero.
-      pattern:
-        spec:
-          =(securityContext):
-            =(runAsUser): ">0"
-          =(ephemeralContainers):
-          - =(securityContext):
+    - name: run-as-non-root-user
+      match:
+        any:
+        - resources:
+            kinds:
+              - Pod
+      validate:
+        message: >-
+          Running as root is not allowed. The fields spec.securityContext.runAsUser,
+          spec.containers[*].securityContext.runAsUser, spec.initContainers[*].securityContext.runAsUser,
+          and spec.ephemeralContainers[*].securityContext.runAsUser must be unset or
+          set to a number greater than zero.
+        pattern:
+          spec:
+            =(securityContext):
               =(runAsUser): ">0"
-          =(initContainers):
-          - =(securityContext):
-              =(runAsUser): ">0"
-          containers:
-          - =(securityContext):
-              =(runAsUser): ">0"
+            =(ephemeralContainers):
+            - =(securityContext):
+                =(runAsUser): ">0"
+            =(initContainers):
+            - =(securityContext):
+                =(runAsUser): ">0"
+            containers:
+            - =(securityContext):
+                =(runAsUser): ">0"
