--- a/pod-security/restricted/require-run-as-nonroot/require-run-as-nonroot.yaml
+++ b/pod-security/restricted/require-run-as-nonroot/require-run-as-nonroot.yaml
@@ -17,37 +17,38 @@ spec:
   validationFailureAction: audit
   background: true
   rules:
-  - name: run-as-non-root
-    match:
-      resources:
-        kinds:
-        - Pod
-    validate:
-      message: >-
-        Running as root is not allowed. Either the field spec.securityContext.runAsNonRoot
-        must be set to `true`, or the fields spec.containers[*].securityContext.runAsNonRoot,
-        spec.initContainers[*].securityContext.runAsNonRoot, and spec.ephemeralContainers[*].securityContext.runAsNonRoot
-        must be set to `true`.
-      anyPattern:
-      - spec:
-          securityContext:
-            runAsNonRoot: true
-          =(ephemeralContainers):
-          - =(securityContext):
-              =(runAsNonRoot): true
-          =(initContainers):
-          - =(securityContext):
-              =(runAsNonRoot): true
-          containers:
-          - =(securityContext):
-              =(runAsNonRoot): true
-      - spec:
-          =(ephemeralContainers):
-          - securityContext:
+    - name: run-as-non-root
+      match:
+        any:
+        - resources:
+            kinds:
+              - Pod
+      validate:
+        message: >-
+          Running as root is not allowed. Either the field spec.securityContext.runAsNonRoot
+          must be set to `true`, or the fields spec.containers[*].securityContext.runAsNonRoot,
+          spec.initContainers[*].securityContext.runAsNonRoot, and spec.ephemeralContainers[*].securityContext.runAsNonRoot
+          must be set to `true`.
+        anyPattern:
+        - spec:
+            securityContext:
               runAsNonRoot: true
-          =(initContainers):
-          - securityContext:
-              runAsNonRoot: true
-          containers:
-          - securityContext:
-              runAsNonRoot: true
+            =(ephemeralContainers):
+            - =(securityContext):
+                =(runAsNonRoot): true
+            =(initContainers):
+            - =(securityContext):
+                =(runAsNonRoot): true
+            containers:
+            - =(securityContext):
+                =(runAsNonRoot): true
+        - spec:
+            =(ephemeralContainers):
+            - securityContext:
+                runAsNonRoot: true
+            =(initContainers):
+            - securityContext:
+                runAsNonRoot: true
+            containers:
+            - securityContext:
+                runAsNonRoot: true
