add precondition with non-existence check to prepend_image_registry
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/prepend_image_registry/prepend_image_registry.yaml
+++ b/other/prepend_image_registry/prepend_image_registry.yaml
@@ -51,6 +51,9 @@ spec:
         value:
         - CREATE
         - UPDATE
+      - key: "{{ request.object.spec.initContainers[] || '' | length(@) }}"
+        operator: GreaterThanOrEquals
+        value: 1
     mutate:
       foreach:
       - list: "request.object.spec.initContainers"
