add "require emptyDir requests and limits"; set "restrict secrets by label" to audit
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/restrict_secrets_by_label/restrict-secrets-by-label.yaml
+++ b/other/restrict_secrets_by_label/restrict-secrets-by-label.yaml
@@ -17,7 +17,7 @@ metadata:
       that only Secrets not labeled with `status=protected` can be consumed by Pods.
 spec:
   background: false
-  validationFailureAction: enforce
+  validationFailureAction: audit
   rules:
   - name: secrets-lookup-from-env
     match:
