--- a/pod-security/baseline/disallow-selinux/disallow-selinux.yaml
+++ b/pod-security/baseline/disallow-selinux/disallow-selinux.yaml
@@ -47,9 +47,10 @@ spec:
                     =(type): "container_t | container_init_t | container_kvm_t"
     - name: selinux-user-role
       match:
-        resources:
-          kinds:
-            - Pod
+        any:
+        - resources:
+            kinds:
+              - Pod
       validate:
         message: >-
           Setting the SELinux user or role is forbidden. The fields
