feat: add runAsNonRoot:true to default
Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

--- a/other/add-default-securitycontext/patchedResource.yaml
+++ b/other/add-default-securitycontext/patchedResource.yaml
@@ -9,6 +9,7 @@ spec:
   - name: nginx
     image: nginx:latest
   securityContext:
+    runAsNonRoot: true
     runAsUser: 1000
     runAsGroup: 3000
     fsGroup: 2000
