--- a/other/only_trustworthy_registries_set_root/only-trustworthy-registries-set-root.yaml
+++ b/other/only_trustworthy_registries_set_root/only-trustworthy-registries-set-root.yaml
@@ -4,7 +4,7 @@ metadata:
   name: only-trustworthy-registries-set-root
   annotations:
     policies.kyverno.io/title: Only Trustworthy Registries Set Root
-    policies.kyverno.io/category: Pod Security Standards (Baseline)
+    policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     kyverno.io/kyverno-version: 1.6.0
     policies.kyverno.io/minversion: 1.6.0
