--- a/psp-migration/restrict_adding_capabilities/restrict-adding-capabilities.yaml
+++ b/psp-migration/restrict_adding_capabilities/restrict-adding-capabilities.yaml
@@ -4,7 +4,7 @@ metadata:
   name: psp-restrict-adding-capabilities
   annotations:
     policies.kyverno.io/title: Restrict Adding Capabilities
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/category: PSP Migration
     policies.kyverno.io/severity: medium
     kyverno.io/kyverno-version: 1.6.0
     policies.kyverno.io/minversion: 1.6.0
