--- a/best-practices/add_safe_to_evict.yaml
+++ b/best-practices/add_safe_to_evict.yaml
@@ -3,7 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: add-safe-to-evict
   annotations:
-    policies.kyverno.io/category: Workload Management
+    policies.kyverno.io/category: Other
     policies.kyverno.io/subject: Pod,Annotation
     policies.kyverno.io/minversion: 1.4.3
     policies.kyverno.io/description: >-
