feat: enhance restrict_automount_sa_token
Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

--- a/other/restrict_automount_sa_token/restrict_automount_sa_token.yaml
+++ b/other/restrict_automount_sa_token/restrict_automount_sa_token.yaml
@@ -26,4 +26,4 @@ spec:
       message: "Auto-mounting of Service Account tokens is not allowed."
       pattern:
         spec:
-          automountServiceAccountToken: false
+          automountServiceAccountToken: "false"
