--- a/pod-security/restricted/kustomization.yaml
+++ b/pod-security/restricted/kustomization.yaml
@@ -1,3 +1,6 @@
+bases:
+  - ../baseline
+  
 resources:
   - disallow-capabilities-strict/disallow-capabilities-strict.yaml
   - disallow-privilege-escalation/disallow-privilege-escalation.yaml
