reverts test for the policy
Signed-off-by: afzal442 <afzal442@gmail.com>

--- a/other/replace_image_registry/kyverno-test.yaml
+++ b/other/replace_image_registry/kyverno-test.yaml
@@ -33,10 +33,10 @@ results:
     resource: myapp-pod2
     kind: Pod
     patchedResource: patchedResource3.yaml
-    result: fail
+    result: pass
   - policy: replace-image-registry
     rule: replace-image-registry-pod-initcontainers
     resource: myapp-pod2
     kind: Pod
     patchedResource: patchedResource3.yaml
-    result: fail
+    result: pass
