--- a/best-practices/add_safe_to_evict/kyverno-test.yaml
+++ b/best-practices/add_safe_to_evict/kyverno-test.yaml
@@ -6,11 +6,23 @@ resources:
 results:
   - policy: add-safe-to-evict
     rule: annotate-empty-dir
-    resource: myapp-pod
+    resource: myapp-pod01
     kind: Pod
     result: skip
   - policy: add-safe-to-evict
     rule: annotate-host-path
-    resource: myapp-pod
+    resource: myapp-pod02
     kind: Pod
     result: skip
+  - policy: add-safe-to-evict
+    rule: annotate-empty-dir
+    resource: myapp-pod03
+    kind: Pod
+    result: pass
+    patchedResource: myapp-pod03-patched.yaml
+  - policy: add-safe-to-evict
+    rule: annotate-host-path
+    resource: myapp-pod04
+    kind: Pod
+    result: pass
+    patchedResource: myapp-pod04-patched.yaml
