--- a/best-practices/disallow_cri_sock_mount/kyverno-test.yaml
+++ b/best-practices/disallow_cri_sock_mount/kyverno-test.yaml
@@ -19,3 +19,18 @@ results:
     resource: pod-with-docker-sock-mount
     kind: Pod
     result: pass
+  - policy: disallow-container-sock-mounts
+    rule: validate-docker-sock-mount
+    resource: goodpod01
+    kind: Pod
+    result: pass
+  - policy: disallow-container-sock-mounts
+    rule: validate-containerd-sock-mount
+    resource: goodpod01
+    kind: Pod
+    result: pass
+  - policy: disallow-container-sock-mounts
+    rule: validate-crio-sock-mount
+    resource: goodpod01
+    kind: Pod
+    result: pass
