--- a/best-practices/disallow_helm_tiller/kyverno-test.yaml
+++ b/best-practices/disallow_helm_tiller/kyverno-test.yaml
@@ -1,11 +1,36 @@
 name: disallow-helm-tiller
 policies:
-  -  disallow_helm_tiller.yaml
+  - disallow_helm_tiller.yaml
 resources:
-  -  resource.yaml
+  - resource.yaml
 results:
   - policy: disallow-helm-tiller
     rule: validate-helm-tiller
-    resource: pod-helm-tiller
+    resource: badpod01
     kind: Pod
+    result: fail
+  - policy: disallow-helm-tiller
+    rule: validate-helm-tiller
+    resource: badpod02
+    kind: Pod
+    result: fail
+  - policy: disallow-helm-tiller
+    rule: validate-helm-tiller
+    resource: goodpod01
+    kind: Pod
+    result: pass
+  - policy: disallow-helm-tiller
+    rule: validate-helm-tiller
+    resource: goodpod02
+    kind: Pod
+    result: pass
+  - policy: disallow-helm-tiller
+    rule: validate-helm-tiller
+    resource: gooddeployment01
+    kind: Deployment
+    result: pass
+  - policy: disallow-helm-tiller
+    rule: validate-helm-tiller
+    resource: baddeployment01
+    kind: Deployment
     result: fail
