--- a/best-practices/require_drop_all/kyverno-test.yaml
+++ b/best-practices/require_drop_all/kyverno-test.yaml
@@ -1,27 +1,18 @@
+# Tests for this policy are covered in a more extensive fashion in the PSS restricted profile
+# in disallow-capabilities-strict.
 name: require_drop_all
 policies:
-  -  require_drop_all.yaml
+  - require_drop_all.yaml
 resources:
-  -  resource.yaml
-variables: values.yaml
+  - resource.yaml
 results:
   - policy: drop-all-capabilities
-    rule: check-for-drop-initcontainers
+    rule: require-drop-all
     resource: add-capabilities
     kind: Pod
     result: pass
   - policy: drop-all-capabilities
-    rule: check-for-drop-containers
-    resource: add-capabilities
-    kind: Pod
-    result: pass
-  - policy: drop-all-capabilities
-    rule: drop-all-initcontainers
-    resource: add-capabilities
-    kind: Pod
-    result: fail
-  - policy: drop-all-capabilities
-    rule: drop-all-containers
-    resource: add-capabilities
+    rule: require-drop-all
+    resource: add-capabilities-bad
     kind: Pod
     result: fail
