--- a/best-practices/require_drop_all/resource.yaml
+++ b/best-practices/require_drop_all/resource.yaml
@@ -9,7 +9,7 @@ spec:
     securityContext:
       capabilities:
         drop:
-          - all
+          - ALL
   containers:
   - name: add-capabilities
     image: gcr.io/google-samples/node-hello:1.0
@@ -17,4 +17,21 @@ spec:
       capabilities:
         add: ["SYS_TIME"]
         drop:
-          - all
+          - ALL
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: add-capabilities-bad
+spec:
+  initContainers:
+  - name: init
+    image: gcr.io/google-samples/node-hello:1.0
+  containers:
+  - name: add-capabilities
+    image: gcr.io/google-samples/node-hello:1.0
+    securityContext:
+      capabilities:
+        add: ["SYS_TIME"]
+        drop:
+          - ALL
