--- a/best-practices/require_labels/kyverno-test.yaml
+++ b/best-practices/require_labels/kyverno-test.yaml
@@ -1,11 +1,26 @@
 name: require-labels
 policies:
-  -  require_labels.yaml
+  - require_labels.yaml
 resources:
-  -  resource.yaml
+  - resource.yaml
 results:
   - policy: require-labels
     rule: check-for-labels
-    resource: myapp-pod
+    resource: badpod01
     kind: Pod
     result: fail
+  - policy: require-labels
+    rule: check-for-labels
+    resource: badpod02
+    kind: Pod
+    result: fail
+  - policy: require-labels
+    rule: check-for-labels
+    resource: goodpod01
+    kind: Pod
+    result: pass
+  - policy: require-labels
+    rule: check-for-labels
+    resource: goodpod02
+    kind: Pod
+    result: pass
