--- a/best-practices/require_pod_requests_limits/require_pod_requests_limits.yaml
+++ b/best-practices/require_pod_requests_limits/require_pod_requests_limits.yaml
@@ -4,7 +4,7 @@ metadata:
   name: require-requests-limits
   annotations:
     policies.kyverno.io/title: Require Limits and Requests
-    policies.kyverno.io/category: Multi-Tenancy
+    policies.kyverno.io/category: Best Practices
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
