--- a/best-practices/require_probes/kyverno-test.yaml
+++ b/best-practices/require_probes/kyverno-test.yaml
@@ -1,11 +1,31 @@
 name: require-pod-probes
 policies:
-  -  require_probes.yaml
+  - require_probes.yaml
 resources:
-  -  resource.yaml
+  - resource.yaml
 results:
   - policy: require-pod-probes
     rule: validate-livenessProbe-readinessProbe
-    resource: myapp-pod
+    resource: goodpod01
+    kind: Pod
+    result: pass
+  - policy: require-pod-probes
+    rule: validate-livenessProbe-readinessProbe
+    resource: goodpod02
+    kind: Pod
+    result: pass
+  - policy: require-pod-probes
+    rule: validate-livenessProbe-readinessProbe
+    resource: badpod01
+    kind: Pod
+    result: fail
+  - policy: require-pod-probes
+    rule: validate-livenessProbe-readinessProbe
+    resource: badpod02
+    kind: Pod
+    result: fail
+  - policy: require-pod-probes
+    rule: validate-livenessProbe-readinessProbe
+    resource: badpod03
     kind: Pod
     result: fail
