--- a/best-practices/require_ro_rootfs/kyverno-test.yaml
+++ b/best-practices/require_ro_rootfs/kyverno-test.yaml
@@ -1,11 +1,31 @@
 name: require_ro_rootfs
 policies:
-  -  require_ro_rootfs.yaml
+  - require_ro_rootfs.yaml
 resources:
-  -  resource.yaml
+  - resource.yaml
 results:
   - policy: require-ro-rootfs
     rule: validate-readOnlyRootFilesystem
-    resource: ghost-with-readonly-rootfilesystem
+    resource: badpod01
     kind: Pod
     result: fail
+  - policy: require-ro-rootfs
+    rule: validate-readOnlyRootFilesystem
+    resource: badpod02
+    kind: Pod
+    result: fail
+  - policy: require-ro-rootfs
+    rule: validate-readOnlyRootFilesystem
+    resource: badpod03
+    kind: Pod
+    result: fail
+  - policy: require-ro-rootfs
+    rule: validate-readOnlyRootFilesystem
+    resource: goodpod01
+    kind: Pod
+    result: pass
+  - policy: require-ro-rootfs
+    rule: validate-readOnlyRootFilesystem
+    resource: goodpod02
+    kind: Pod
+    result: pass
