--- a/best-practices/restrict-service-external-ips/resource.yaml
+++ b/best-practices/restrict-service-external-ips/resource.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-service
+  name: goodservice01
 spec:
   selector:
     app: MyApp
@@ -9,3 +9,32 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 9376
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: badservice01
+spec:
+  selector:
+    app: MyApp
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 9376
+  externalIPs:
+    - 1.2.3.4
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: badservice02
+spec:
+  selector:
+    app: MyApp
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 9376
+  externalIPs:
+    - 1.2.3.4
+    - 37.10.11.53
