--- a/best-practices/restrict_image_registries/kyverno-test.yaml
+++ b/best-practices/restrict_image_registries/kyverno-test.yaml
@@ -6,6 +6,36 @@ resources:
 results:
   - policy: restrict-image-registries
     rule: validate-registries
-    resource: k8s-nginx
+    resource: badpod01
     kind: Pod
     result: fail
+  - policy: restrict-image-registries
+    rule: validate-registries
+    resource: badpod02
+    kind: Pod
+    result: fail
+  - policy: restrict-image-registries
+    rule: validate-registries
+    resource: badpod03
+    kind: Pod
+    result: fail
+  - policy: restrict-image-registries
+    rule: validate-registries
+    resource: badpod04
+    kind: Pod
+    result: fail
+  - policy: restrict-image-registries
+    rule: validate-registries
+    resource: goodpod01
+    kind: Pod
+    result: pass
+  - policy: restrict-image-registries
+    rule: validate-registries
+    resource: goodpod02
+    kind: Pod
+    result: pass
+  - policy: restrict-image-registries
+    rule: validate-registries
+    resource: goodpod03
+    kind: Pod
+    result: pass
