--- a/other/mutate-large-termination-gps.yaml
+++ b/other/mutate-large-termination-gps.yaml
@@ -22,7 +22,7 @@ spec:
             - Pod
       preconditions:
         all:
-        - key: "{{request.object.spec.terminationGracePeriodSeconds}}"
+        - key: "{{request.object.spec.terminationGracePeriodSeconds || `0` }}"
           operator: GreaterThan
           value: 50   # maximum tGPS allowed by cluster admin
       mutate:
