--- a/other/block_stale_images/block-stale-images.yaml
+++ b/other/block_stale_images/block-stale-images.yaml
@@ -13,7 +13,7 @@ metadata:
     policies.kyverno.io/description: >-
       Images that are old usually have some open security vulnerabilities which are not patched.
       This policy checks the contents of every container image and inspects them for the create time.
-      If it finds any image which was built more than 6 months ago, this policy blocks the deployment.
+      If it finds any image which was built more than 6 months ago this policy blocks the deployment.
 spec:
   validationFailureAction: audit 
   rules:
