--- a/openshift/disallow-jenkins-pipeline-strategy/disallow-jenkins-pipeline-strategy.yaml
+++ b/openshift/disallow-jenkins-pipeline-strategy/disallow-jenkins-pipeline-strategy.yaml
@@ -18,10 +18,11 @@ spec:
   rules:
   - name: check-build-strategy
     match:
-      resources:
-        kinds:
-        - v1/BuildConfig
-        - build.openshift.io/v1/BuildConfig
+      any:
+      - resources:
+          kinds:
+          - v1/BuildConfig
+          - build.openshift.io/v1/BuildConfig
     validate:
       message: >-
         Jenkins Pipeline Build Strategy has been deprecated and is not allowed
