--- a/other/exclude_namespaces_dynamically.yaml
+++ b/other/exclude_namespaces_dynamically.yaml
@@ -31,7 +31,7 @@ spec:
     preconditions:
       all:
       - key: "{{request.object.metadata.namespace}}"
-        operator: NotIn
+        operator: AnyNotIn
         value: "{{namespacefilters.data.exclude}}"
     validate:
       message: >
