--- a/other/exclude_namespaces_dynamically.yaml
+++ b/other/exclude_namespaces_dynamically.yaml
@@ -7,6 +7,9 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Namespace, Pod
+    policies.kyverno.io/minversion: 1.6.0
+    kyverno.io/kyverno-version: 1.6.0
+    kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/description: >-
       It's common where policy lookups need to consider a mapping to many possible values rather than a
       static mapping. This is a sample which demonstrates how to dynamically look up an allow list of Namespaces from a ConfigMap
