--- a/other/prevent-cr8escape/prevent-cr8escape.yaml
+++ b/other/prevent-cr8escape/prevent-cr8escape.yaml
@@ -11,9 +11,10 @@ metadata:
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/subject: Node
     policies.kyverno.io/description: >-
-      A vulnerability ( “cr8escape”, CVE-2022-0811) in CRI-O the container runtime engine underpinning Kubernetes allows
-      attackers to escape from a Kubernetes container and gain root access to the host. The recommended 
-      remediation is to disallow sysctl settings with “+” or “=” in their value.
+      A vulnerability “cr8escape” (CVE-2022-0811) in CRI-O the container runtime engine 
+      underpinning Kubernetes allows attackers to escape from a Kubernetes container 
+      and gain root access to the host. The recommended remediation is to disallow 
+      sysctl settings with “+” or “=” in their value.
 spec:
   validationFailureAction: enforce
   background: true
