In is deprecated
Signed-off-by: dadav <33197631+dadav@users.noreply.github.com>

--- a/openshift/unique-routes/unique-routes.yaml
+++ b/openshift/unique-routes/unique-routes.yaml
@@ -42,5 +42,5 @@ spec:
           conditions:
             all:
               - key: "{{ request.object.spec.host }}"
-                operator: In
+                operator: AnyIn
                 value: "{{ hosts }}"
