Add tests for generate policies and add pdb policy
Signed-off-by: Shubham Nazare <shubham4443@gmail.com>

--- a/best-practices/add_network_policy/add_network_policy.yaml
+++ b/best-practices/add_network_policy/add_network_policy.yaml
@@ -22,6 +22,7 @@ spec:
         kinds:
         - Namespace
     generate:
+      apiVersion: networking.k8s.io/v1
       kind: NetworkPolicy
       name: default-deny
       namespace: "{{request.object.metadata.name}}"
