--- a/other/sync_secrets/sync_secrets.yaml
+++ b/other/sync_secrets/sync_secrets.yaml
@@ -12,7 +12,7 @@ metadata:
       is time consuming and error prone. This policy will copy a
       Secret called `regcred` which exists in the `default` Namespace to
       new Namespaces when they are created. It will also push updates to
-      the copied Secrets should the source Secret be changed.
+      the copied Secrets should the source Secret be changed.      
 spec:
   rules:
   - name: sync-image-pull-secret
@@ -21,6 +21,7 @@ spec:
         kinds:
         - Namespace
     generate:
+      apiVersion: v1
       kind: Secret
       name: regcred
       namespace: "{{request.object.metadata.name}}"
