fix build issue

--- a/cert-manager/limit-duration/resource.yaml
+++ b/cert-manager/limit-duration/resource.yaml
@@ -41,6 +41,7 @@ spec:
     name: letsencrypt-prod
     kind: Issuer
     group: cert-manager.io
+  duration: 3400h0m0s
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
