--- a/cert-manager/limit-duration/kyverno-test.yaml
+++ b/cert-manager/limit-duration/kyverno-test.yaml
@@ -8,7 +8,7 @@ results:
     rule: certificate-duration-max-100days 
     resource: letsencrypt-crt
     kind: Certificate
-    result: skip
+    result: fail
   - policy: cert-manager-limit-duration
     rule: certificate-duration-max-100days 
     resource: acme-crt-short
