--- a/other/restrict_ingress_host/kyverno-test.yaml
+++ b/other/restrict_ingress_host/kyverno-test.yaml
@@ -14,12 +14,12 @@ results:
     rule: check-single-host
     resource: ingress-foo-host
     kind: Ingress
-    result: skip
+    result: fail
   - policy: unique-ingress-host
     rule: deny-multiple-hosts
     resource: ingress-kyverno-host
     kind: Ingress
-    result: skip
+    result: fail
   - policy: unique-ingress-host
     rule: deny-multiple-hosts
     resource: ingress-foo-host
