--- a/best-practices/nginx-custom-snippets/disallow-custom-snippets.yaml
+++ b/best-practices/nginx-custom-snippets/disallow-custom-snippets.yaml
@@ -17,8 +17,9 @@ spec:
   rules:
     - name: check-config-map
       match:
-        resources:
-          kinds:
+        any:
+        - resources:
+            kinds:
             - ConfigMap      
       validate:
         message: "ingress-nginx allow-snippet-annotations must be set to false"
@@ -27,9 +28,10 @@ spec:
             =(allow-snippet-annotations) : "false"
     - name: check-ingress-annotations
       match:
-        resources:
-          kinds:
-            - Ingress      
+        any:
+        - resources:
+            kinds:
+            - networking.k8s.io/v1/Ingress            
       validate:
         message: "ingress-nginx custom snippets are not allowed"
         pattern:
