add versions and CM reference
Signed-off-by: Jim Bugwadia <jim@nirmata.com>

--- a/best-practices/nginx_annotation_checks/restrict-annotations.yaml
+++ b/best-practices/nginx_annotation_checks/restrict-annotations.yaml
@@ -8,9 +8,13 @@ metadata:
     policies.kyverno.io/severity: high
     policies.kyverno.io/subject: Ingress, NGINX Ingress
     policies.kyverno.io/minversion: 1.6.0
-    policies.kyverno.io/description: |-
+    kyverno.io/kyverno-version: 1.6.0
+    kyverno.io/kubernetes-version: 1.23
+    policies.kyverno.io/description: >-
       This policy mitigates CVE-2021-25746 by restricting `metadata.annotations` to safe values.
-      See: https://github.com/kubernetes/ingress-nginx/blame/main/internal/ingress/inspector/rules.go
+      See: https://github.com/kubernetes/ingress-nginx/blame/main/internal/ingress/inspector/rules.go.
+      For NGINX Ingress released version 1.0.5+ the "annotation-value-word-blocklist" configuration setting
+      is also recommended. Please refer to the CVE for details. 
 spec:
   rules:
     - name: check-ingress
