add NGINX fix version
Signed-off-by: Jim Bugwadia <jim@nirmata.com>

--- a/best-practices/nginx_path_checks/restrict-path.yaml
+++ b/best-practices/nginx_path_checks/restrict-path.yaml
@@ -12,7 +12,8 @@ metadata:
     kyverno.io/kubernetes-version: 1.23
     policies.kyverno.io/description: >-
       This policy mitigates CVE-2021-25745 by restricting `spec.rules[].http.paths[].path` to safe values.
-      Additional paths can be added as required. Please refer to the CVE for details.
+      Additional paths can be added as required. This issue has been fixed in NGINX Ingress v1.2.0. 
+      Please refer to the CVE for details.
 spec:
   rules:
     - name: check-paths
